Finalized the code for v1.0.0 release